# genie-toolkit

./: .coverage  .gitignore  README.md  genie.yml  pyproject.toml
src/genie_config_manager/: __init__.py  cli.py  genie_service.py  schemas.py  templates.py
src/genie_toolkit/: __main__.py  cli.py  genie_service.py  optimiser.py  schemas.py
tests/: test_cli.py  test_genie_service.py  test_optimiser.py  test_schemas.py
